добавил парсинг ответа от openweathermap

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,5 +2,7 @@
 <resources>
     <string name="app_name">WeatherApplication</string>
     <string name="text_main_local">en</string>
-    <string name="text_main_temp">"Temp: "</string>
+    <string name="text_main_temp">"Temp: %.02f"</string>
+    <string name="text_main_citynotfound">City not found</string>
+    <string name="text_main_unknownerror">Unknown error: %s</string>
 </resources>
